GNOME Bugzilla – Bug 755931
File chooser: interactive search drops the 1st character when used the 2nd time
Last modified: 2015-10-02 03:34:35 UTC
1. Open a file chooser 2. Type 'src' to get the search bar 3. Press Esc to cancel the search 4. Press Esc again to hide the search bar 5. Type 'src' again to get the search bar Expected result: 'src' in the search bar Actual result: 'rc' in the search bar, since the 1st letter types 's' and then leaves it selected, so subsequent typing replaces the selection.